2009-09-01  Christophe Tournery  <christophe.tournery@illusonic.com>

	* audio/wavread.m: Rename data_size from obsolete ck_size.

2009-07-23  John W. Eaton  <jwe@octave.org>

	* plot/legend.m: Process arguments in order, child objects in
	reverse.  Remove special case for single label.  New demos.

	2009-09-18  Jaroslav Hajek  <highegg@gmail.com>

	Version 3.2.3 released.

2009-07-23  John W. Eaton  <jwe@octave.org>

	* image/imread.m: Fix test.

2009-06-23  Alexander Mamonov  <mamonov@gmail.com>

	* image/imread.m: New test.

2009-09-09  Tatsuro Matsuoka <tmacchant@yahoo.co.jp>

	* plot/gnuplot_drawnow.m: Avoid flickering windows by avoding
	'set multiplot' / 'unset multiplot' for gnuplot's windows and
	wxt terminals.

2009-09-08  John W. Eaton  <jwe@octave.org>

	* io/dlmwrite.m: Fix typo.

2009-09-05  John W. Eaton  <jwe@octave.org>

	* plot/hold.m: Correctly toggle hold state.  Set both figure and
	axes "nextplot" property when turning hold state on.
	* plot/ishold.m: Check figure and axes nextplot properties.
	Accept axes or figure handle argument.

2009-08-17  Jaroslav Hajek  <highegg@gmail.com>

	* general/int2str.m: Convert to double before calling log10.

2009-08-29  John W. Eaton  <jwe@octave.org>

	* time/datestr.m: Add missing semicolon.

2009-08-26  E. Joshua Rigler  <relgire@gmail.com>

	* time/datestr.m: Set tm.isdst to -1 before calling mktime.

2009-08-06  John W. Eaton  <jwe@octave.org>

	* statistics/base/std.m: Correctly work along singleton dimension.
	From Christoph Ellenberger <C.Ellenberger@gmx.net>.

2009-08-06  Olaf Till <olaf.till@uni-jena.de>

	* geometry/griddata.m: Linearize arrays.

2009-08-25  John W. Eaton  <jwe@octave.org>

	* plot/__gnuplot_open_stream__.m: Save pid in __plot_stream__ property.
	* plot/gnuplot_drawnow.m: Wait for gnuplot subprocess when printing.
	From Ben Abbott <bpabbott@mac.com>, Rob Mahurin <rob@utk.edu>, and
	Dmitri Sergatskov <dasergatskov@gmail.com>.

2009-08-22  David Bateman  <dbateman@free.fr>
